[tool.poetry]
name = "pygeoapi-prefect"
version = "0.1.0"
description = ""
authors = ["Geobeyond <info@geobeyond.it>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pygeoapi_prefect", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"
prefect = "^2.14.18"
click = "8.0.0"  # this version is fixed in order to be compatible with upstream pygeoapi
pygeoapi = {path = "../../pygeoapi", develop = true}
uvicorn = "^0.27.0.post1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
s3fs = "2023.1.0"
pre-commit = "^3.2.2"
pytest = "^7.3.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.9"

[tool.poetry.plugins."pygeoapi"]
prefect = "pygeoapi_prefect.cli:root"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
