[project]
name = "pygeoapi-prefect"
version = "0.1.0-dev"
description = "A pygeoapi plugin to use prefect for managing OGC API - Processes tasks"
authors = [
    {name = "Geobeyond", email = "info@geobeyond.it"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=1.10.7,<2",
    "prefect>=2.9.0,<3",
    "click==8.0.0",  # this version is fixed in order to be compatible with upstream pygeoapi
    "pygeoapi",
]

[dependency-groups]
dev = [
    "ipython>=8.11.0",
    "s3fs==2023.1.0",
    "pytest>=7.3.1",
    "ruff>=0.9",
    "ty>=0.0.1a5",
]
docs = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.9",
]

[project.entry-points."pygeoapi"]
prefect = "pygeoapi_prefect.cli:root"

[tool.uv.sources]
pygeoapi = { path = "../../pygeoapi", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pygeoapi_prefect"]
