[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = [
    "version"
]
name = "pygeoapi-prefect"
description = "A pygeoapi plugin to use prefect for managing OGC API - Processes tasks"
license = "MIT"
license-files =[
    "LICENSE"
]
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Ricardo Garcia Silva", email = "ricardo.garcia.silva@geobeyond.it"}
]
maintainers = [
    {name = "Geobeyond", email = "info@geobeyond.it"}
]
keywords = [ "OGC-API", "OGC-API Processes", "Prefect", "pygeoapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "pydantic>=2.0",
    "prefect>=3.0",
    "click==8.0.0", # this version is fixed in order to be compatible with upstream pygeoapi
    "pygeoapi",
    "jsonschema[format]>=4.26.0",
]

[project.urls]
homepage = "https://geobeyond.github.io/pygeoapi-prefect/"
repository = "https://github.com/geobeyond/pygeoapi-prefect"
documentation = "https://geobeyond.github.io/pygeoapi-prefect/"
"Bug Tracker" = "https://github.com/geobeyond/pygeoapi-prefect/issues"

[dependency-groups]
dev = [
    "ipython>=8.11.0",
    "s3fs==2023.1.0",
    "pytest>=7.3.1",
    "ruff>=0.9",
    "ty>=0.0.1a5",
    "prefect-docker>=0.7.1",
]
docs = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.9",
]

[project.entry-points."pygeoapi"]
prefect = "pygeoapi_prefect.cli:root"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ty.analysis]
allowed-unresolved-imports = ["pygeoapi.**"]

[tool.pytest.ini_options]
addopts = "--strict-markers --verbose"
markers = []

[tool.hatch.build.targets.wheel]
packages = ["src/pygeoapi_prefect"]
